Update - Starting to work on some basic collision detection (point to AABB).

--- a/WOFFCEdit/Win32SimpleSample.vcxproj
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="MFCRenderFrame.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="MFCMain.cpp" />
+    <ClCompile Include="1300455_MottersheadJason\Utilities\Physics\Physics.cpp" />
     <ClCompile Include="SceneObject.cpp" />
     <ClCompile Include="SelectDialogue.cpp" />
     <ClCompile Include="sqlite3.c" />
@@ -193,6 +194,7 @@
     <ClInclude Include="MFCFrame.h" />
     <ClInclude Include="MFCRenderFrame.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="1300455_MottersheadJason\Utilities\Physics\Physics.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SceneObject.h" />
     <ClInclude Include="SelectDialogue.h" />
