--- a/WOFFCEdit/Win32SimpleSample.vcxproj.filters
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj.filters
@@ -130,6 +130,9 @@
     <Image Include="toolbar1.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="toolbar2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Media Include="database\data\Scene1.fbx" />
