--- a/WOFFCEdit/Win32SimpleSample.vcxproj.filters
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj.filters
@@ -65,6 +65,7 @@
     <ClCompile Include="1300455_MottersheadJason\Physics\Raycast.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Events\EventSystem.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Objects\BaseObject.cpp" />
+    <ClCompile Include="1300455_MottersheadJason\Components\Transform\TransformComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DeviceResources.h">
@@ -123,6 +124,8 @@
     <ClInclude Include="1300455_MottersheadJason\Events\EventTypes.h" />
     <ClInclude Include="1300455_MottersheadJason\Events\EventSystem.h" />
     <ClInclude Include="1300455_MottersheadJason\Objects\BaseObject.h" />
+    <ClInclude Include="1300455_MottersheadJason\Components\Component.h" />
+    <ClInclude Include="1300455_MottersheadJason\Components\Transform\TransformComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
