Update - Setup the collider components, really chuffed with the architecture so far!

--- a/WOFFCEdit/Win32SimpleSample.vcxproj
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj
@@ -165,8 +165,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="1300455_MottersheadJason\Physics\AABBCollider.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Objects\BaseObject.cpp" />
+    <ClCompile Include="1300455_MottersheadJason\Components\Physics\BoxColliderComponent.cpp" />
     <ClCompile Include="ChunkObject.cpp" />
     <ClCompile Include="DeviceResources.cpp" />
     <ClCompile Include="DisplayChunk.cpp" />
@@ -189,11 +189,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="1300455_MottersheadJason\Events\EventTypes.h" />
-    <ClInclude Include="1300455_MottersheadJason\Physics\AABBCollider.h" />
     <ClInclude Include="1300455_MottersheadJason\Objects\BaseObject.h" />
+    <ClInclude Include="1300455_MottersheadJason\Components\Physics\BoxColliderComponent.h" />
     <ClInclude Include="ChunkObject.h" />
-    <ClInclude Include="1300455_MottersheadJason\Physics\Collider.h" />
     <ClInclude Include="1300455_MottersheadJason\Components\Component.h" />
+    <ClInclude Include="1300455_MottersheadJason\Components\Physics\ColliderComponent.h" />
     <ClInclude Include="DeviceResources.h" />
     <ClInclude Include="DisplayChunk.h" />
     <ClInclude Include="DisplayObject.h" />
