--- a/WOFFCEdit/Win32SimpleSample.vcxproj.filters
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj.filters
@@ -61,11 +61,11 @@
     </ClCompile>
     <ClCompile Include="1300455_MottersheadJason\Utilities\Maths\Maths.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Utilities\Utils.cpp" />
-    <ClCompile Include="1300455_MottersheadJason\Physics\AABBCollider.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Physics\Raycast.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Events\EventSystem.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Objects\BaseObject.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Components\Transform\TransformComponent.cpp" />
+    <ClCompile Include="1300455_MottersheadJason\Components\Physics\BoxColliderComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DeviceResources.h">
@@ -117,8 +117,6 @@
     </ClInclude>
     <ClInclude Include="1300455_MottersheadJason\Utilities\Maths\Maths.h" />
     <ClInclude Include="1300455_MottersheadJason\Utilities\Utils.h" />
-    <ClInclude Include="1300455_MottersheadJason\Physics\Collider.h" />
-    <ClInclude Include="1300455_MottersheadJason\Physics\AABBCollider.h" />
     <ClInclude Include="1300455_MottersheadJason\Physics\Raycast.h" />
     <ClInclude Include="1300455_MottersheadJason\Objects\Observer.h" />
     <ClInclude Include="1300455_MottersheadJason\Events\EventTypes.h" />
@@ -126,6 +124,8 @@
     <ClInclude Include="1300455_MottersheadJason\Objects\BaseObject.h" />
     <ClInclude Include="1300455_MottersheadJason\Components\Component.h" />
     <ClInclude Include="1300455_MottersheadJason\Components\Transform\TransformComponent.h" />
+    <ClInclude Include="1300455_MottersheadJason\Components\Physics\ColliderComponent.h" />
+    <ClInclude Include="1300455_MottersheadJason\Components\Physics\BoxColliderComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
