Update - Setup unreal engine camera controls (wasd + q/e as well as right click and drag for rotation). Added lerp to maths singleton class. Added more functionality to the transform component (look at points, foward, right and up vectors).

--- a/WOFFCEdit/Win32SimpleSample.vcxproj
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj
@@ -100,7 +100,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d11.lib;dxgi.lib;dxguid.lib;uuid.lib;</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;dxgi.lib;dxguid.lib;uuid.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>
       </AdditionalLibraryDirectories>
     </Link>
