--- a/WOFFCEdit/Win32SimpleSample.vcxproj
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="DisplayObject.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Events\EventSystem.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="1300455_MottersheadJason\Utilities\Input\Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Utilities\Maths\Maths.cpp" />
     <ClCompile Include="MFCFrame.cpp" />
@@ -201,6 +202,7 @@
     <ClInclude Include="DisplayObject.h" />
     <ClInclude Include="1300455_MottersheadJason\Events\EventSystem.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="1300455_MottersheadJason\Utilities\Input\Input.h" />
     <ClInclude Include="InputCommands.h" />
     <ClInclude Include="1300455_MottersheadJason\Utilities\Maths\Maths.h" />
     <ClInclude Include="MFCFrame.h" />
