--- a/WOFFCEdit/Win32SimpleSample.vcxproj.filters
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj.filters
@@ -67,6 +67,7 @@
     <ClCompile Include="1300455_MottersheadJason\Components\Transform\TransformComponent.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Components\Physics\BoxColliderComponent.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Objects\Camera.cpp" />
+    <ClCompile Include="1300455_MottersheadJason\Utilities\Input\Input.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DeviceResources.h">
@@ -128,6 +129,7 @@
     <ClInclude Include="1300455_MottersheadJason\Components\Physics\ColliderComponent.h" />
     <ClInclude Include="1300455_MottersheadJason\Components\Physics\BoxColliderComponent.h" />
     <ClInclude Include="1300455_MottersheadJason\Objects\Camera.h" />
+    <ClInclude Include="1300455_MottersheadJason\Utilities\Input\Input.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
