--- a/WOFFCEdit/Win32SimpleSample.vcxproj.filters
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj.filters
@@ -68,6 +68,7 @@
     <ClCompile Include="1300455_MottersheadJason\Components\Physics\BoxColliderComponent.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Objects\Camera.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Utilities\Input\Input.cpp" />
+    <ClCompile Include="1300455_MottersheadJason\Utilities\Input\CrossPlatformInput.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DeviceResources.h">
@@ -101,9 +102,6 @@
     <ClInclude Include="DisplayObject.h">
       <Filter>Renderer</Filter>
     </ClInclude>
-    <ClInclude Include="InputCommands.h">
-      <Filter>Tool</Filter>
-    </ClInclude>
     <ClInclude Include="MFCFrame.h">
       <Filter>MFC</Filter>
     </ClInclude>
@@ -130,6 +128,7 @@
     <ClInclude Include="1300455_MottersheadJason\Components\Physics\BoxColliderComponent.h" />
     <ClInclude Include="1300455_MottersheadJason\Objects\Camera.h" />
     <ClInclude Include="1300455_MottersheadJason\Utilities\Input\Input.h" />
+    <ClInclude Include="1300455_MottersheadJason\Utilities\Input\CrossPlatformInput.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
