Update - Works with the scene graph instead of the display list.

--- a/WOFFCEdit/Win32SimpleSample.vcxproj
+++ b/WOFFCEdit/Win32SimpleSample.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="DisplayChunk.cpp" />
     <ClCompile Include="DisplayObject.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Events\EventSystem.cpp" />
+    <ClCompile Include="1300455_MottersheadJason\Editor\Editor.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="1300455_MottersheadJason\Utilities\Input\Input.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -204,6 +205,7 @@
     <ClInclude Include="DisplayChunk.h" />
     <ClInclude Include="DisplayObject.h" />
     <ClInclude Include="1300455_MottersheadJason\Events\EventSystem.h" />
+    <ClInclude Include="1300455_MottersheadJason\Editor\Editor.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="1300455_MottersheadJason\Utilities\Input\Input.h" />
     <ClInclude Include="1300455_MottersheadJason\Utilities\Maths\Maths.h" />
